Added a very simple command in CLI with jlink to increase deployment density